--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="showHide.js"></script>
 
     <script type="text/javascript" src="addRemove.js"></script>
+    <script type="text/javascript" src="bootstrap.js"></script>
 
     </head>
     
@@ -37,7 +38,6 @@
             <li><a href="#">My Profile</a></li>
           </ul>
         </li>
-        <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
       </ul>
     </div>
   </div><!-- /container -->
