Returned to previous css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
         <title>My Webpage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" type="text/css" href="bootstrap-theme.css"/>
+        <link rel="stylesheet" type="text/css" href="bootstrap.css"/>
 
         
         <script src="http://code.jquery.com/jquery-1.4.3.js"></script>
